[package]
name = "pool"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
libsecp256k1 = "0.7.1"
hex = "0.4.3"
sha3 = "0.10.8"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }