[package]
name = "pool"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true}

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
secp256k1 = { version = "0.29.0", features = ["rand-std","recovery"] }
hex = "0.4.3"
